--- a/src/Carousel/CarouselArrows/style.css
+++ b/src/Carousel/CarouselArrows/style.css
@@ -5,6 +5,7 @@
   width: 40px;
   height: 60px;
   margin-top: -20px;
+  cursor: pointer;
 }
 
 .carousel-arrow.left {
@@ -14,4 +15,3 @@
 .carousel-arrow.right {
   right: 0;
 }
-
